# microcodenator

./: .gitignore  ChangeLog  Makefile.am  README.md  TODO  configure.ac  microcodenator.1.include
debian/: control
src/: Makefile.am  microcodenator  microcodenator.conf
